# Advanced-Programming-1-Exercise-3

./: CLI.cpp  CLI.h  CMakeLists.txt  ClassifyFlower.cpp  ClassifyFlower.h  ClientHandler.cpp  ClientHandler.h  CreateClassifiedFiles.cpp  CreateClassifiedFiles.h  CreateFlowerByLine.cpp  CreateFlowerByLine.h  DistanceCalculator.cpp  DistanceCalculator.h  Flower.cpp  Flower.h  GetUnclassifiedFileData.cpp  GetUnclassifiedFileData.h  KNN.cpp  KNN.h  README.md  ReadFlowers.cpp  ReadFlowers.h  SocketIO.cpp  SocketIO.h  run.sh  tempMain.cpp  tempMain.h
Client/: Client.cpp  Client.h  ClientFront.cpp  ClientFront.h
Command/: AlgoSettingsCommand.cpp  AlgoSettingsCommand.h  ClassifyCommand.cpp  ClassifyCommand.h  Command.cpp  Command.h  ConfusionMatrixCommand.cpp  ConfusionMatrixCommand.h  DownloadResultsCommand.cpp  DownloadResultsCommand.h  ExitCommand.cpp  ExitCommand.h  PrintClassifiedCommand.cpp  PrintClassifiedCommand.h  UploadCommand.cpp  UploadCommand.h  confusionMatrixCommand.cpp  confusionMatrixCommand.h
Converts/: StringTo.cpp  StringTo.h
IO/: DefaultIO.cpp  DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server/: Server.cpp  Server.h  ServerFront.cpp  ServerFront.h
